# rustzk

./: .cursorrules  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  LICENSE  README.md  SECURITY.md  package-lock.json  package.json
.ai-context-os/: CLAUDE.md  GEMINI.md
docs/: README.md  api-reference.md  code-standards.md  codebase-summary.md  deployment-guide.md  project-overview.md  system-architecture.md
documents/: knowledge-architecture.md  knowledge-domain.md  knowledge-overview.md  knowledge-source-base.md  knowledge-standards.md
examples/: check_device_info.rs  check_time.rs  check_timezone.rs  debug_commands.rs  debug_log_count.rs  debug_users.rs  fingerprint_management.rs  get_attendance.rs  live_events.rs  user_management.rs
plans/: implement-tests-20260218.md  optimize-pointers-20260219.md
reports/: CONNECTION_HANDLING_ARCHITECTURE.md  CONNECTION_HANDLING_BACKEND_ANALYSIS.md  connect_disconnect_review.md  heap_memory_analysis.md  housekeeping-20260219.md  review-20260218.md  review-20260220.md  scout-misalignment.md
scripts/: ci.sh
src/: constants.rs  lib.rs  main.rs  models.rs  protocol.rs  security.rs  validation.rs
tests/: ack_flow_test.rs  auth_tests.rs  checksum_tests.rs  client_tests.rs  connection_handling_tests.rs  drop_tests.rs  fingerprint_tests.rs  fuzz_allocation.rs  heap_optimization_tests.rs  integer_safety_tests.rs  live_event_tests.rs  misalignment_tests.rs  parsing_tests.rs  safety_tests.rs  security_memory.rs  split_response_tests.rs  stress_connection_tests.rs  time_sync_tests.rs  user_tests.rs  (+1 more)
(+26 files in other folders)
