[package]
name = "rustzk"
version = "0.1.5"
edition = "2021"
description = "A pure Rust implementation of the ZK protocol for attendance devices."
license = "MIT"
repository = "https://github.com/vkaylee/rustzk"
keywords = ["zk", "attendance", "protocol", "iot"]
categories = ["embedded", "network-programming"]

[dependencies]
chrono = "0.4"
byteorder = "1.5"
thiserror = "1.0"
bitflags = "2.4"
